Added JUnit Testing for OrderController